# open_deepagents

./: .env.example  .gitignore  README.md  README_CH.md  model_ping.py  pyproject.toml  quickstart.py
backend/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/api/: deps.py  router.py
backend/app/auth/: __init__.py
backend/app/chat/: __init__.py
backend/app/core/: auth.py  config.py  database.py  logging.py  session_scope.py
backend/app/db/: manage.py  models.py
backend/app/extensions/: __init__.py
backend/app/schemas/: auth.py  message.py  run.py  session.py  session_state.py  upload.py
backend/app/services/: runs.py  session_state.py  session_titles.py  storage.py
backend/app/sessions/: __init__.py
backend/app/storage/: __init__.py  local.py  minio.py
backend/app/uploads/: __init__.py
backend/deepagents_integration/: __init__.py  agent_factory.py  config.py  context.py  extensions.py  run_hooks.py  sse_bridge.py
backend/examples/middleware/: audit_middleware.py
backend/examples/tools/: echo_tool.py
backend/extensions/middleware/: README.md  __init__.py  audit_middleware.py
backend/extensions/runtime_hooks/: README.md  __init__.py  attachment_hooks.py  session_state_hooks.py
backend/extensions/sandboxes/: README.md
backend/extensions/skills/: README.md
backend/prompts/: deepagents-system-prompt.md
backend/tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_runs.py  test_session_state.py  test_sessions.py
docs/: sandbox.md  (+2 more)
(+73 files in other folders)
