[project]
name = "deepagents-agent-platform-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the DeepAgents agent platform scaffold"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.116.1,<0.117",
    "pydantic-settings>=2.10.1,<3",
    "PyJWT>=2.10.1,<3",
    "pymysql>=1.1.1,<2",
    "python-multipart>=0.0.20,<0.1",
    "sqlalchemy>=2.0.43,<3",
    "uvicorn>=0.35.0,<0.36",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29",
    "mypy>=1.17.1,<2",
    "pytest>=8.4.1,<9",
    "ruff>=0.12.10,<0.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []
exclude = ["tests"]
